--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/lightbox.js"></script>
     <link rel="stylesheet" href="main.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <title>Japon Arabaları</title>
     <style>
